class right needed to have a fixed value to be visible on other devices and browser and the nav bubble needed to be adjust

--- a/portfolio-hugo-varloud-meyer/src/components/Home/Home.css
+++ b/portfolio-hugo-varloud-meyer/src/components/Home/Home.css
@@ -118,7 +118,7 @@
 .right {
     position: absolute;
     top: 0;
-    width: -webkit-fill-available;
+    width: 67vw;
     left: 30%;
     height: 33vh;
     min-height: 20px;
